# GeneralBacktest

./: .gitignore  CHANGELOG.md  LICENSE  PYPI_UPLOAD_GUIDE.md  README.md  README.zh-CN.md  __init__.py  backtest.py  db_config.py  debug_log.out  pyproject.toml  setup.py  test_plotting_redesign.py  utils.py  每日权重记录功能说明.md
.claude/: settings.local.json
claude-skill-generalbacktest/: README.md  SKILL.md
claude-skill-generalbacktest/examples/: cash_backtest_template.py  data_timing_and_no_lookahead.md  visualization_workflow.py
example/: example.py  test_basic.py  test_complete.py  test_output.txt
examples/: README.md  advanced_example.py  basic_example.py  complete_demo.py  t0_example.py
output_demo/: .gitkeep  README.md  README_v1.1.0.md  demo_cash_series.csv  demo_cash_trades.csv
output_demo/cash_demo/: demo_cash_nav_series.csv
output_demo/standard_demo/: demo_standard_nav_series.csv
output_demo/t0_demo/: t0_intraday_records.csv  t0_nav_series.csv
src/GeneralBacktest/: __init__.py  backtest.py  tbacktest.py  utils.py
